--- a/imagens.html
+++ b/imagens.html
@@ -51,6 +51,24 @@
             font-size: 1rem;
         }
 
+        /* --- BOTÃO HAMBURGER (MOBILE) --- */
+        #hamburger-btn {
+            display: none; /* Oculto por padrão */
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            z-index: 1001;
+            background: rgba(15, 25, 15, 0.7);
+            backdrop-filter: blur(5px);
+            color: #fff;
+            border: 1px solid rgba(255,255,255,0.2);
+            border-radius: 8px;
+            width: 45px;
+            height: 45px;
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
         nav {
             display: flex;
             justify-content: center;
@@ -370,17 +388,38 @@
             .header-subtitle {
                 font-size: 0.85rem; /* Tamanho ligeiramente reduzido */
             }
-            nav {
-                flex-direction: column;
-                align-items: center;
-                padding: 0;
+
+            /* --- ESTILOS DO MENU HAMBURGER --- */
+            #hamburger-btn {
+                display: block; /* Mostra o botão no mobile */
             }
+
+            nav {
+                position: fixed;
+                top: 0;
+                left: -100%; /* Começa fora da tela */
+                width: 70%;
+                height: 100%;
+                background: rgba(15, 25, 15, 0.9);
+                backdrop-filter: blur(10px);
+                flex-direction: column;
+                align-items: flex-start; /* Alinha itens à esquerda */
+                padding-top: 60px; /* Espaço para o botão de fechar */
+                transition: left 0.3s ease-in-out;
+                z-index: 1000;
+            }
+
+            nav.open {
+                left: 0; /* Mostra o menu */
+            }
+
             nav .nav-btn {
                 width: 100%;
-                text-align: center;
+                text-align: left; /* Alinha texto à esquerda */
                 margin: 0;
-                padding: 1rem 0;
+                padding: 1rem 1.5rem; /* Ajusta padding */
                 border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+                box-sizing: border-box;
             }
             nav .nav-btn:last-child {
                 border-bottom: none;
@@ -432,12 +471,16 @@
         <p class="header-subtitle">Federal University of Pernambuco | Evolutionary Biology | Ferns and Lycophytes</p>
     </header>
     
+    <button id="hamburger-btn" aria-label="Open menu">
+        <i class="fas fa-bars"></i>
+    </button>
+
     <!-- # Barra de navegação com a aba Imagens ativa -->
     <nav>
         <a href="index.html" class="nav-btn">About</a>
         <a href="pesquisa.html" class="nav-btn">Research</a>
         <a href="equipe.html" class="nav-btn">Team</a>
-        <a href="Publicações.html" class="nav-btn">Publications</a>
+        <a href="publicacoes.html" class="nav-btn">Publications</a>
         <a href="imagens.html" class="nav-btn active">Gallery</a>
         <a href="contato.html" class="nav-btn">Contact</a>
     </nav>
@@ -546,7 +589,7 @@
                 <img src="imagens/imagens da seção/Asplenium_reprodução vegetativa_SP_Tapiraí.JPG" alt="Asplenium sp. (vegetative reproduction)" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
-                    <span class="overlay-caption"><i>Asplenium</i> sp. (vegetative reproduction)</span>
+                    <span class="overlay-caption"><i>Asplenium</i> sp. (vegetative reprodução)</span>
          </div>
               </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
@@ -732,6 +775,24 @@
     </footer>
 
     <script>
+        // --- CONTROLE DO MENU HAMBURGER ---
+        document.addEventListener("DOMContentLoaded", () => {
+            const hamburgerBtn = document.getElementById('hamburger-btn');
+            const nav = document.querySelector('nav');
+            const icon = hamburgerBtn.querySelector('i');
+
+            hamburgerBtn.addEventListener('click', () => {
+                nav.classList.toggle('open');
+                if (nav.classList.contains('open')) {
+                    icon.classList.remove('fa-bars');
+                    icon.classList.add('fa-times');
+                } else {
+                    icon.classList.remove('fa-times');
+                    icon.classList.add('fa-bars');
+                }
+            });
+        });
+
         const modal = document.getElementById("imageModal");
         const modalImg = document.getElementById("modalImage");
         const modalCaption = document.getElementById("modalCaption");
