--- a/contato.html
+++ b/contato.html
@@ -50,6 +50,24 @@
             font-size: 1rem;
         }
 
+        /* --- BOTÃO HAMBURGER (MOBILE) --- */
+        #hamburger-btn {
+            display: none; /* Oculto por padrão */
+            position: fixed;
+            top: 15px;
+            right: 20px;
+            z-index: 1001;
+            background: rgba(15, 25, 15, 0.7);
+            backdrop-filter: blur(5px);
+            color: #fff;
+            border: 1px solid rgba(255,255,255,0.2);
+            border-radius: 8px;
+            width: 45px;
+            height: 45px;
+            font-size: 1.5rem;
+            cursor: pointer;
+        }
+
         /* # Barra de navegação */
         nav {
             display: flex;
@@ -273,17 +291,38 @@
             .header-subtitle {
                 font-size: 0.85rem; /* Tamanho ligeiramente reduzido */
             }
-            nav {
-                flex-direction: column;
-                align-items: center;
-                padding: 0;
+
+            /* --- ESTILOS DO MENU HAMBURGER --- */
+            #hamburger-btn {
+                display: block; /* Mostra o botão no mobile */
             }
+
+            nav {
+                position: fixed;
+                top: 0;
+                left: -100%; /* Começa fora da tela */
+                width: 70%;
+                height: 100%;
+                background: rgba(15, 25, 15, 0.9);
+                backdrop-filter: blur(10px);
+                flex-direction: column;
+                align-items: flex-start; /* Alinha itens à esquerda */
+                padding-top: 60px; /* Espaço para o botão de fechar */
+                transition: left 0.3s ease-in-out;
+                z-index: 1000;
+            }
+
+            nav.open {
+                left: 0; /* Mostra o menu */
+            }
+
             nav .nav-btn {
                 width: 100%;
-                text-align: center;
+                text-align: left; /* Alinha texto à esquerda */
                 margin: 0;
-                padding: 1rem 0;
+                padding: 1rem 1.5rem; /* Ajusta padding */
                 border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+                box-sizing: border-box;
             }
             nav .nav-btn:last-child {
                 border-bottom: none;
@@ -307,7 +346,10 @@
                 gap: 2rem;
             }
             .contato-form {
-                margin-top: 2rem;
+                margin-top: 0; /* Reset margin from original mobile styles */
+            }
+            .contact-details {
+                margin-top: 2rem; /* Add space above the details section */
             }
         }
     </style>
@@ -320,12 +362,16 @@
         <p class="header-subtitle">Federal University of Pernambuco | Evolutionary Biology | Ferns and Lycophytes</p>
     </header>
     
+    <button id="hamburger-btn" aria-label="Open menu">
+        <i class="fas fa-bars"></i>
+    </button>
+
     <!-- # Barra de navegação com a aba Contato ativa -->
     <nav>
         <a href="index.html" class="nav-btn">About</a>
         <a href="pesquisa.html" class="nav-btn">Research</a>
         <a href="equipe.html" class="nav-btn">Team</a>
-        <a href="publicações.html" class="nav-btn">Publications</a>
+        <a href="publicacoes.html" class="nav-btn">Publications</a>
         <a href="imagens.html" class="nav-btn">Gallery</a>
         <a href="contato.html" class="nav-btn active">Contact</a>
     </nav>
@@ -335,6 +381,19 @@
         <h2>Get in Touch</h2>
         
         <div class="contact-container">
+            <form class="contato-form" action="https://formsubmit.co/niksoneyazevedo2017@gmail.com" method="POST">
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_next" value="obrigado.html">
+                <input type="hidden" name="_autoresponse" value="We have received your message! We will get in touch soon.">
+                <label for="nome">Name:</label>
+                <input type="text" id="nome" name="nome" required autocomplete="name" placeholder="Your full name">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required autocomplete="email" placeholder="Your best e-mail">
+                <label for="mensagem">Message:</label>
+                <textarea id="mensagem" name="mensagem" required placeholder="Write your message here..."></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+
             <div class="contact-details">
                 <h3>Our Information</h3>
                 <div class="info-item">
@@ -366,23 +425,30 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.633993139144!2d-34.9509403!3d-8.0504196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab195fd620d13b%3A0xffa11af1393e0f23!2sCB%20-%20Centro%20de%20Bioci%C3%AAncias%20(UFPE)!5e0!3m2!1spt-BR!2sbr!4v1695838881515!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-
-            <form class="contato-form" action="https://formsubmit.co/niksoneyazevedo2017@gmail.com" method="POST">
-                <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="obrigado.html">
-                <input type="hidden" name="_autoresponse" value="We have received your message! We will get in touch soon.">
-                <label for="nome">Name:</label>
-                <input type="text" id="nome" name="nome" required autocomplete="name" placeholder="Your full name">
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required autocomplete="email" placeholder="Your best e-mail">
-                <label for="mensagem">Message:</label>
-                <textarea id="mensagem" name="mensagem" required placeholder="Write your message here..."></textarea>
-                <button type="submit">Send Message</button>
-            </form>
         </div>
     </section>
     <!-- # Mesmo rodapé do index.html -->
     <footer>
         &copy; 2025 Fern and Lycophyte Evolution Lab
     </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const hamburgerBtn = document.getElementById('hamburger-btn');
+            const nav = document.querySelector('nav');
+            const icon = hamburgerBtn.querySelector('i');
+
+            hamburgerBtn.addEventListener('click', () => {
+                nav.classList.toggle('open');
+                if (nav.classList.contains('open')) {
+                    icon.classList.remove('fa-bars');
+                    icon.classList.add('fa-times');
+                } else {
+                    icon.classList.remove('fa-times');
+                    icon.classList.add('fa-bars');
+                }
+            });
+        });
+    </script>
 </body>
+</html>
