--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
             .stat-item {
                 min-width: unset;
                 width: 100%;
+                box-sizing: border-box; /* # Garante que o padding não cause overflow */
             }
             .stat-number {
                 font-size: 2.2rem;
