Minhas edições no site

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             }
             .stat-item {
                 min-width: unset;
-                width: 100%;
+                /* width: 100%; */ /* Removido para permitir que o flexbox controle a largura */
                 box-sizing: border-box; /* # Garante que o padding não cause overflow */
             }
             .stat-number {
