--- a/publicacoes.html
+++ b/publicacoes.html
@@ -19,7 +19,7 @@
             background-size: cover;
             background-attachment: fixed;
             position: relative;
-            padding-bottom: 70px;
+            padding-bottom: 70px; /* Espaço para o rodapé fixo */
         }
         body::before {
             content: "";
@@ -322,10 +322,11 @@
             align-items: center;
             padding: 20px;
             box-sizing: border-box;
+            flex-direction: column; /* Legenda sempre abaixo da imagem */
         }
         .modal-content {
             max-width: 90%;
-            max-height: 90%;
+            max-height: 80vh; /* Altura ajustada para dar espaço à legenda */
             border-radius: 10px;
             box-shadow: 0 0 25px rgba(0,0,0,0.5);
         }
@@ -341,6 +342,16 @@
         }
         .modal-close:hover {
             color: #4caf50;
+        }
+
+        .modal-caption {
+            text-align: center;
+            color: #ccc;
+            padding: 15px 10px;
+            font-size: 0.9rem;
+            line-height: 1.4;
+            max-width: 80%;
+            margin: 0 auto;
         }
 
         @media (min-width: 768px) {
@@ -421,6 +432,13 @@
             }
             .artigo-gallery {
                 margin-top: 1rem;
+            }
+
+            .modal-content {
+                max-height: 75vh; /* Limita a altura da imagem para dar espaço à legenda */
+            }
+            .modal-caption {
+                max-width: 90%;
             }
         }
     </style>
@@ -506,9 +524,9 @@
                     <a href="https://www.scielo.br/j/aa/a/X9yQjq5QWQZVKKtZr5QzHqM/?lang=en" class="btn-acessar">Access Article</a>
                 </div>
                 <div class="artigo-gallery">
-                    <img src="imagens/Artigos/Rediscovery after three decades_1.jpg" alt="Image from article 2-1" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_1.jpg', 'Figure 1: A - Specimen of the sponge <em>Metania kiliani</em> (UFPEPOR2999) growing on the fronds of the fern <em>Actinostachys pennula</em> (UFP89884)...')">
-                    <img src="imagens/Artigos/Rediscovery after three decades_2.jpg" alt="Image from article 2-2" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_2.jpg', 'Figure 2: Distribution of <em>Metania kiliani</em> in Amazonas and Roraima states (Brazil) Black circle = type locality...')">
-                    <img src="imagens/Artigos/Rediscovery after three decades_3.jpg" alt="Image from article 2-3" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_3.jpg', 'Figure 3: SEM images of the spicules of <em>Metania kiliani</em> (UFPEPOR2999). A - Alpha-megasclere; B - Beta-megascleres; C-E - Anisochelaes gemoscleres; F-G - Boletiform gemmocleres; H-J - Gemmule...')">
+                    <img src="imagens/Artigos/Rediscovery after three décadas_1.jpg" alt="Image from article 2-1" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_1.jpg', 'Figure 1: A - Specimen of the sponge <em>Metania kiliani</em> (UFPEPOR2999) growing on the fronds of the fern <em>Actinostachys pennula</em> (UFP89884)...')">
+                    <img src="imagens/Artigos/Rediscovery after três décadas_2.jpg" alt="Image from article 2-2" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_2.jpg', 'Figure 2: Distribution of <em>Metania kiliani</em> in Amazonas and Roraima states (Brazil) Black circle = type locality...')">
+                    <img src="imagens/Artigos/Rediscovery after três décadas_3.jpg" alt="Image from article 2-3" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_3.jpg', 'Figure 3: SEM images of the spicules of <em>Metania kiliani</em> (UFPEPOR2999). A - Alpha-megasclere; B - Beta-megascleres; C-E - Anisochelaes gemoscleres; F-G - Boletiform gemmocleres; H-J - Gemmule...')">
                 </div>
             </div>
         </div>
