Minhas edições no site

--- a/contato.html
+++ b/contato.html
@@ -381,10 +381,17 @@
         <h2>Get in Touch</h2>
         
         <div class="contact-container">
-            <form class="contato-form" action="https://formsubmit.co/niksoneyazevedo2017@gmail.com" method="POST">
+            <!-- 
+                IMPORTANTE: Para o redirecionamento para a página "Obrigado" funcionar, você precisa ativar seu formulário.
+                1. Publique o site com este código.
+                2. Acesse a página de contato no site publicado e envie uma mensagem de teste.
+                3. Verifique seu e-mail (o mesmo associado à conta do formsubmit). Você receberá uma mensagem para "Ativar Formulário".
+                4. Clique no botão de ativação nesse e-mail. A partir daí, todos os envios serão redirecionados corretamente.
+            -->
+            <form class="contato-form" action="https://formsubmit.co/labevol.samambaias@ufpe.br" method="POST">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="labevofern.github.io/sitelab/obrigado.html">
-                <input type="hidden" name="_autoresponse" value="We have received your message! We will get in touch soon.">
+<input type="hidden" name="_next" value="https://labevofern.github.io/sitelab/obrigado.html">
+<input type="hidden" name="_autoresponse" value="We have received your message! We will get in touch soon.">
                 <label for="nome">Name:</label>
                 <input type="text" id="nome" name="nome" required autocomplete="name" placeholder="Your full name">
                 <label for="email">E-mail:</label>
@@ -452,8 +459,3 @@
     </script>
 </body>
 </html>
-    </script>
-</body>
-</html>
-    </script>
-</body>
