--- a/imagens.html
+++ b/imagens.html
@@ -576,22 +576,22 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Adiantum cajennese</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Asplenium_reprodução vegetativa2_SP_Tapiraí.JPG" alt="Asplenium sp. (vegetative reproduction)" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Asplenium</i> sp. (vegetative reproduction)</span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
-                <img src="imagens/imagens da seção/Asplenium_reprodução vegetativa_SP_Tapiraí.JPG" alt="Asplenium sp. (vegetative reproduction)" loading="lazy">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                <img src="imagens/imagens da seção/Asplenium_reprodução vegetativa_SP_Tapiraí.JPG" alt="Asplenium sp. (vegetative reprodução)" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Asplenium</i> sp. (vegetative reprodução)</span>
-         </div>
-              </div>
+                </div>
+            </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Baculo__SP_Tapiraí.JPG" alt="Fiddlehead of a fern (sp.)" loading="lazy">
                 <div class="gallery-overlay">
@@ -604,22 +604,22 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Cyathea corcovadensis</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Cyathea_atrovirens_SP_Tapirai.JPG" alt="Cyathea atrovirens" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Cyathea atrovirens</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Cyathea_bipinnatifida_AC_Serra do Divisor.JPG" alt="Cyathea bipinnatifida" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Cyathea bipinnatifida</i></span>
                 </div>
-        </div>
+            </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Eupodium_kaulfussi_SP_Tapiraí.JPG" alt="Eupodium kaulfussi" loading="lazy">
                 <div class="gallery-overlay">
@@ -632,29 +632,29 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Gleicheniaceae</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Hecistopteris_pumila_AC.JPG" alt="Hecistopteris pumila" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Hecistopteris pumila</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Hemidyctium marginatum_SP_Tapiraí.JPG" alt="Hemidyctium marginatum" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Hemidyctium marginatum</i></span>  
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Lindsaea_hemiglossa_AC_Serra Divisor.JPG" alt="Lindsaea hemiglossa" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Lindsaea hemiglossa</i></span>
                 </div>
-        </div>
+            </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Lomaridium_plumieri_SP_Tapiraí.JPG" alt="Lomaridium plumieri" loading="lazy">
                 <div class="gallery-overlay">
@@ -667,50 +667,50 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Microgramma squamulosa</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Microgramma_geminata_ES.JPG" alt="Microgramma geminata" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Microgramma geminata</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Microgramma_microsoroides_ES.JPG" alt="Microgramma microsoroides" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Microgramma microsoroides</i></span>      
-              </div>
-         </div>
+                </div>
+            </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Microgramma_vacciniifolia_PR.jpg" alt="Microgramma vacciniifolia" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Microgramma vacciniifolia</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Neoblechnum_brasiliense_SP_Tapiraí.JPG" alt="Neoblechnum brasiliense" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Neoblechnum brasiliense</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Pleopeltis_hirsutissima_SP_Tapiraí.JPG" alt="Pleopeltis hirsutissima" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Pleopeltis hirsutissima</i></span>  
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Saccoloma_inaequale_SP_Tapiraí.JPG" alt="Saccoloma inaequale" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Saccoloma inaequale</i></span>
                 </div>
-        </div>
+            </div>
             <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Schizaea_elegans_SP_Tapiraí.JPG" alt="Schizaea elegans" loading="lazy">
                 <div class="gallery-overlay">
@@ -723,16 +723,16 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Schizaea flabellum</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Selaginella_SP_Tapiraí.JPG" alt="Selaginella sp." loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Selaginella</i> sp.</span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Trichomanes_diversifrons_ACSerra Divisor.JPG" alt="Trichomanes diversifrons" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
@@ -744,15 +744,15 @@
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Trichomanes elegans</i></span>
-              </div>
-         </div>
-                <div class="gallery-item" data-category="especies" onclick="openModal(this)">
+                </div>
+            </div>
+            <div class="gallery-item" data-category="especies" onclick="openModal(this)">
                 <img src="imagens/imagens da seção/Triplophyllum funestum_PA.JPG" alt="Triplophyllum funestum" loading="lazy">
                 <div class="gallery-overlay">
                     <i class="fas fa-search-plus overlay-icon"></i>
                     <span class="overlay-caption"><i>Triplophyllum funestum</i></span>
-              </div>
-         </div>  
+                </div>
+            </div>  
     </div>
 
     <div class="load-more-container">
