--- a/publicacoes.html
+++ b/publicacoes.html
@@ -524,9 +524,9 @@
                     <a href="https://www.scielo.br/j/aa/a/X9yQjq5QWQZVKKtZr5QzHqM/?lang=en" class="btn-acessar">Access Article</a>
                 </div>
                 <div class="artigo-gallery">
-                    <img src="imagens/Artigos/Rediscovery after three décadas_1.jpg" alt="Image from article 2-1" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_1.jpg', 'Figure 1: A - Specimen of the sponge <em>Metania kiliani</em> (UFPEPOR2999) growing on the fronds of the fern <em>Actinostachys pennula</em> (UFP89884)...')">
-                    <img src="imagens/Artigos/Rediscovery after três décadas_2.jpg" alt="Image from article 2-2" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_2.jpg', 'Figure 2: Distribution of <em>Metania kiliani</em> in Amazonas and Roraima states (Brazil) Black circle = type locality...')">
-                    <img src="imagens/Artigos/Rediscovery after três décadas_3.jpg" alt="Image from article 2-3" onclick="openModal('imagens/Artigos/Rediscovery after três décadas_3.jpg', 'Figure 3: SEM images of the spicules of <em>Metania kiliani</em> (UFPEPOR2999). A - Alpha-megasclere; B - Beta-megascleres; C-E - Anisochelaes gemoscleres; F-G - Boletiform gemmocleres; H-J - Gemmule...')">
+                    <img src="imagens/Artigos/Rediscovery after three decades_1.jpg" alt="Image from article 2-1" onclick="openModal('imagens/Artigos/Rediscovery after three decades_1.jpg', 'Figure 1: A - Specimen of the sponge <em>Metania kiliani</em> (UFPEPOR2999) growing on the fronds of the fern <em>Actinostachys pennula</em> (UFP89884)...')">
+                    <img src="imagens/Artigos/Rediscovery after three decades_2.jpg" alt="Image from article 2-2" onclick="openModal('imagens/Artigos/Rediscovery after three decades_2.jpg', 'Figure 2: Distribution of <em>Metania kiliani</em> in Amazonas and Roraima states (Brazil) Black circle = type locality...')">
+                    <img src="imagens/Artigos/Rediscovery after three decades_3.jpg" alt="Image from article 2-3" onclick="openModal('imagens/Artigos/Rediscovery after three decades_3.jpg', 'Figure 3: SEM images of the spicules of <em>Metania kiliani</em> (UFPEPOR2999). A - Alpha-megasclere; B - Beta-megascleres; C-E - Anisochelaes gemoscleres; F-G - Boletiform gemmocleres; H-J - Gemmule...')">
                 </div>
             </div>
         </div>
