--- a/equipe.html
+++ b/equipe.html
@@ -409,7 +409,7 @@
         <div class="team-icons">
           <a href="mailto:thais.almeida@ufpe.br" title="E-mail"><i class="fa-solid fa-envelope"></i></a> 
           <a href="http://lattes.cnpq.br/1101716646731462" target="_blank" title="Lattes CV"><i class="fa-solid fa-graduation-cap"></i></a>
-          <a href="https://www.researchgate.net/profile/Thais-Almeida-25" title="ResearchGate" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
+          <a href="https://www.researchgate.net/profile/Niksoney-Mendonca" title="ResearchGate" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
         </div>
       </div>
       <div class="team-info">
@@ -688,6 +688,24 @@
         <div class="team-area">MSc Student | Taxonomy and ecology of ferns and lycophytes</div>
         <div class="team-description">
           Bachelor's degree from the Federal University of Maranhão (UFMA) at the Chapadinha Center for Sciences (CCCh) and a member of the Plant Systematics Laboratory, where she was a PIBIC/FAPEMA fellow from 2022-2024. She is currently a master's student in the Postgraduate Program in Environmental Sciences/UFMA and a Technological and Industrial Development (DTI-C) fellow for the subproject "Unveiling diversity: flora as support for scientific, social, and economic development in the Eastern Amazon" of the PPBio/CNPq Network Line 1: Eastern Amazon.
+        </div>
+      </div>
+    </div>
+
+     <div class="team-member">
+      <div class="team-photo-container">
+        <img src="imagens/Marcos.jpg" class="team-photo">
+        <div class="team-icons">
+          <a href="mailto:prof.bio.marcosmartins@gmail.com" title="E-mail"><i class="fa-solid fa-envelope"></i></a> 
+          <a href="http://lattes.cnpq.br/9749257602251940" target="_blank" title="Lattes CV"><i class="fa-solid fa-graduation-cap"></i></a>
+          <a href="https://www.researchgate.net/profile/Marcos-Martins-5" title="ResearchGate" target="_blank"><i class="fa-brands fa-researchgate"></i></a>
+        </div>
+      </div>
+      <div class="team-info">
+        <div class="team-name">Marcos B. S. Martins | Federal Rural University of Amazonia (UFRA)</div>
+        <div class="team-area">PhD Student | Taxonomy of ferns and lycophytes</div>
+        <div class="team-description">
+          I am a PhD student in Biological Sciences in the Tropical Botany Postgraduate Program at the Emílio Goeldi Pará Museum (MPEG), in partnership with the Federal Rural University of the Amazon (UFRA). My research focuses on understanding the effects of urbanization on epiphytic lycophyte and fern communities in the Belém Endemism Area (BEA). From this understanding, I aim to show whether or not endemic species of these floristic groups have changed their distribution throughout the Amazon. My main areas of interest include ecological analysis, modeling, floristics, and the taxonomy of ferns and lycophytes. I actively contribute to floristic and inventory studies, seeking to fill knowledge gaps about the flora of these groups in the Amazon.
         </div>
       </div>
     </div>
