--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
     <div class="info-box reveal-on-scroll">
         <h4>Our Commitment to Diversity</h4>
-        <p style="text-align: justify;">We believe that science thrives on diverse perspectives. Our lab is a safe and inclusive space for everyone, regardless of race, ethnicity, gender identity, sexual orientation, religion, disability, or socioeconomic background. We actively champion equity and stand in solidarity with Black, Indigenous, People of Color (BIPOC), and LGBTQIA+ communities. We are committed to fostering an environment where all voices are heard, valued, and respected.</p>
+        <p style="text-align: justify;">We believe that science thrives on diverse perspectives. Our lab is a safe and inclusive space for everyone, regardless of race, ethnicity, gender identity, sexual orientation, religion, disability, or socioeconomic background. We actively champion equity and stand in solidarity with Black, Indigenous, People of Color (BIPOC), and LGBTQIAPN+ communities. We are committed to fostering an environment where all voices are heard, valued, and respected.</p>
     </div>
 
     <div class="stats-container reveal-on-scroll">
@@ -528,7 +528,6 @@
             <div class="keywords">Conservation, Ecology, Threatened Species, Rare Species, Regional Flora, Climate Change, Taxonomy</div>
         </div>
     </div>
-
 </section>
     </footer>
 
