--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
             }
         }
     </style>
+<meta name="google-site-verification" content="IWyJ_NzAIuGw_9udAAbmesAifWzTWvGjsEDieRRw93A" />
 </head>
 <body>
     <!-- # Cabeçalho com logo e título -->
@@ -592,4 +593,5 @@
             });
         });
     </script>
+
 </body>
