--- a/equipe.html
+++ b/equipe.html
@@ -651,7 +651,7 @@
         <div class="team-name">David Gutiérrez-Duque | Federal University of Pernambuco (UFPE)</div>
         <div class="team-area">MSc Student | Taxonomy, systematics, and biogeography of <em>Megalastrum</em></div>
         <div class="team-description">
-          I am currently pursuing a master's degree at the Federal University of Pernambuco (Brazil), studying the fern genus <em>Megalastrum</em>. My main interest is Plant Biology, especially in the taxonomy and ecology of ferns. I also work with the systematics of the tree family Lecythidaceae.
+          Completed his undergraduate degree in Colombia, where he studied Andean ferns. He is currently studying the fern genus <em>Megalastrum</em>, its taxonomy, and the biogeographic processes that have modelled the distribution of its species in mountainous regions. David also has experience in palynological analysis of spores, inferential statistical analysis, and bioinformatics.
         </div>
       </div>
     </div>
